# ece-408

./: .gitignore  README.Project-GPT.md  README.md  README.release.md
Profiling-Lecture/: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  argparse.hpp  build.sh  common.hpp  generate_ncu-rep.sh  generate_nsys.sh  matmul_pageable.cu  ncu.slurm  nsys.slurm  run.slurm
Profiling-Lecture/kernels/: align_buffer.hpp  kernels.hpp
Profiling-Lecture/kernels/matmul/: matmul.hpp  shared_improved_matmul.cuh  shared_matmul.cuh  simple_matmul.cuh
Profiling-Lecture/reference_nsys-rep/A40/: matmul_pageable.nsys-rep
Project/: .gitignore  README.md  README_m1.md  README_m2.md  README_m3.md  m1_cpu.slurm  m1_gpu.slurm  m2_fused.slurm  m2_unroll.slurm  m3.slurm  run.sh
Project/project/: CMakeLists.txt
Project/project/m3/op_1/: m3-forward.cu
Project/project/m3/op_2/: m3-forward.cu
Project/project/m3/op_3/: m3-forward.cu
Project/project/m3/op_4/: m3-forward.cu
Project/project/m3/op_5/: m3-forward.cu
Project/project/m3/req_0/: m3-forward.cu
Project/project/m3/req_1/: m3-forward.cu
Project/project/src/layer/custom/: cpu-new-forward.cc  kernel-fusion-forward.cu  new-forward.cu  unroll-new-forward.cu
lab0/: README.md  job.slurm
lab1/: README.md  job.slurm  lab1.cu
lab2/: job.slurm  job_sanitizer.slurm  lab2.cu
lab3/: job.slurm  job_sanitizer.slurm  lab3.cu
lab4/: job.slurm  job_sanitizer.slurm  lab4.cu
lab5/: Makefile  README.md  job.slurm  job_sanitizer.slurm  lab5.cu
lab6/: Makefile  README.md  job.slurm  job_sanitizer.slurm  lab6.cu
lab7/: README.md  job.slurm  job_sanitizer.slurm  lab7.cu
lab8/: job.slurm  job_sanitizer.slurm  lab8.cu
